# RailwayAnalysis

./: .gitignore  2024-2025-2--计科2024级--计算思维综合实践II--课程任务书.docx  CMakeLists.txt  README.md  RailwayAnalysis.pro  使用说明.md  列车表.csv  客运站点.csv  运营线路客运站.csv
include/: analysisengine.h  chartwidget.h  datamanager.h  mainwindow.h  passengerflow.h  predictionmodel.h  qcustomplot.h  station.h  tablewidget.h  train.h
src/: analysisengine.cpp  chartwidget.cpp  datamanager.cpp  main.cpp  mainwindow.cpp  passengerflow.cpp  predictionmodel.cpp  qcustomplot.cpp  station.cpp  tablewidget.cpp  train.cpp
ui/: mainwindow.ui
